--- a/TrabalhoBanco/WebContent/AlterarCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AlterarCliente.xhtml
@@ -56,6 +56,7 @@
 	<h:form acceptcharset="ISO-8859-1" id="Cadastro">
 	<h:panelGrid columns="1">
 	<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
+	<h:inputHidden value="#{mAgenciaBean.agencia.idAgen}"></h:inputHidden>
 	<p:outputLabel value="Nome: "></p:outputLabel>
 	<p:inputText pt:placeholder="Digite o nome" value="#{mCadastroBean.cadastro.nome}"></p:inputText>
 	<br/>
