--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -60,7 +60,7 @@
 	<h:form acceptcharset="ISO-8859-1">
 	<ui:composition template="Template.xhtml">
 		<ui:define name="conteudo">
-		<h1>• Ir para</h1>
+		<h1>• Área do Administrador</h1>
 		<nav>
 	<p:menubar>
 		<p:submenu label="Listas">
