--- a/TrabalhoBanco/WebContent/AreaCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AreaCliente.xhtml
@@ -56,6 +56,7 @@
 		</div>
 	</div>
 </nav>
+<h1>• Informações do Cliente</h1>
 	<h:form acceptcharset="ISO-8859-1" id="Cliente">
 	<h:panelGrid columns="3">
 	<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
@@ -86,7 +87,7 @@
 	<p:outputLabel value="Conta: "></p:outputLabel>
 	<p:outputLabel value="#{mCadastroBean.cadastro.conta}"></p:outputLabel>
 	</h:panelGrid>			
-			<h1>• Ir para</h1>
+			<h2>• Ir para</h2>
 			<br/>
 			<ul>
 		<li><a href="Saldo.xhtml">Saldo</a></li>
