--- a/TrabalhoBanco/WebContent/Deposito.xhtml
+++ b/TrabalhoBanco/WebContent/Deposito.xhtml
@@ -63,6 +63,9 @@
 			<p:inputText id="quantidade" required="true" pt:placeholder="" value="#{mCadastroBean.cadastro.quantidade}"></p:inputText>
 	
 <h:outputText value="numero da conta "/>
-			<p:inputText id="nconta" required="true" pt:placeholder="" value="#{mCadastroBean.cadastro.nconta}"></p:inputText>
+			<p:inputText id="nconta" required="true" pt:placeholder="" value="#{mContaBean.conta.idconta}"></p:inputText>
 			</fieldset>
+			</h:form>
+			</h:body>
+			
 </html>
