--- a/TrabalhoBanco/WebContent/Transferencia.xhtml
+++ b/TrabalhoBanco/WebContent/Transferencia.xhtml
@@ -76,7 +76,7 @@
 			<p:inputText id="vtrans" required="true" pt:placeholder="Digite o valor" value=""></p:inputText>
 			<br/> 
 			<br/> 
-			 
+			<b:icon name="glyphicon-user"/> 
 			<h:outputText value=" Data de Tranferencia: "/>
 			<p:inputText id="datatrans" required="true" pt:placeholder="Data de transferencia" value=""></p:inputText><br/> 
 			<br/>
