--- a/TrabalhoBanco/WebContent/ListarEndereco.xhtml
+++ b/TrabalhoBanco/WebContent/ListarEndereco.xhtml
@@ -58,6 +58,9 @@
 	<p:column><f:facet name="header">Nome do Cliente</f:facet>
 	<h:outputText value="#{cadastroEndereco.cadastro.nome}"></h:outputText>
 	</p:column>
+	<p:column><f:facet name="header">CEP</f:facet>
+	<h:outputText value="#{cadastroEndereco.cep}"></h:outputText>
+	</p:column>
 	<p:column><f:facet name="header">Rua</f:facet>
 	<h:outputText value="#{cadastroEndereco.rua}"></h:outputText>
 	</p:column>
