--- a/TrabalhoBanco/WebContent/BuscarEndereco.xhtml
+++ b/TrabalhoBanco/WebContent/BuscarEndereco.xhtml
@@ -54,41 +54,17 @@
   </div>
 </nav>
 	<h:form acceptcharset="ISO-8859-1" id="Endereco">
-	<h:panelGrid columns="1">
-	<h:inputHidden value="#{mEnderecoBean.endereco.idEnd}"></h:inputHidden>
-	<p:outputLabel value="CEP: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o CEP" value="#{mEnderecoBean.endereco.cep}"></p:inputText>
+	<p:panelGrid colums="1" style="margin-left: 10px; margin-bottom:20px" >
+	<p:messages id="messages" />
+	<p:outputLabel value="• CEP a ser buscado:" />
+	<h:inputText pt:placeholder="Digite o CEP" value="#{mEnderecoBean.endereco.cep}"></h:inputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="Rua: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite a Rua" value="#{mEnderecoBean.endereco.rua}"></p:inputText>
+	<h:commandButton value="Buscar" action="#{mEnderecoBean.buscarEndereco}" ajax="false"></h:commandButton>
 	<br/>
 	<br/>
-	<p:outputLabel value="Número: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o número" value="#{mEnderecoBean.endereco.numero}"></p:inputText>
-	<br/>
-	<br/>
-	<p:outputLabel value="Bairro: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o bairro" value="#{mEnderecoBean.endereco.bairro}"></p:inputText>
-	<br/>
-	<br/>
-	<p:outputLabel value="Cidade: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite a cidade" value="#{mEnderecoBean.endereco.cidade}"></p:inputText>
-	<br/>
-	<br/>
-	<p:outputLabel value="Estado: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o estado" value="#{mEnderecoBean.endereco.estado}"></p:inputText>
-	<br/>
-	<br/>
-	<p:outputLabel value="País: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o país" value="#{mEnderecoBean.endereco.pais}"></p:inputText>
-	<br/>
-	<br/>
-	<p:commandButton value="Alterar" action="#{mEnderecoBean.alterarEndereco(mEnderecoBean.endereco)}"></p:commandButton>
-	<br/>
-	<br/>
-	<p:commandButton value="Retornar" action="ListarEndereco.xhtml?faces-redirect=true"></p:commandButton>
-	</h:panelGrid>
+	<h:commandButton value="Retornar" action="Administrador.xhtml?faces-redirect=true"></h:commandButton>
+	</p:panelGrid>
 	</h:form>
 </body>
 </html>
