--- a/TrabalhoBanco/WebContent/EnderecoEncontrado.xhtml
+++ b/TrabalhoBanco/WebContent/EnderecoEncontrado.xhtml
@@ -54,41 +54,39 @@
   </div>
 </nav>
 	<h:form acceptcharset="ISO-8859-1" id="Endereco">
-	<h:panelGrid columns="1">
-	<h:inputHidden value="#{mEnderecoBean.endereco.idEnd}"></h:inputHidden>
-	<p:outputLabel value="CEP: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o CEP" value="#{mEnderecoBean.endereco.cep}"></p:inputText>
+	<h:outputText value=" Nome do Cliente: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.cadastro.nome}"></h:outputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="Rua: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite a Rua" value="#{mEnderecoBean.endereco.rua}"></p:inputText>
+	<h:outputText value=" CEP: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.cep}"></h:outputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="Número: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o número" value="#{mEnderecoBean.endereco.numero}"></p:inputText>
+	<h:outputText value=" Rua: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.rua}"></h:outputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="Bairro: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o bairro" value="#{mEnderecoBean.endereco.bairro}"></p:inputText>
+	<h:outputText value=" Número: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.numero}"></h:outputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="Cidade: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite a cidade" value="#{mEnderecoBean.endereco.cidade}"></p:inputText>
+	<h:outputText value=" Bairro: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.bairro}"></h:outputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="Estado: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o estado" value="#{mEnderecoBean.endereco.estado}"></p:inputText>
+	<h:outputText value=" Cidade: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.cidade}"></h:outputText>
 	<br/>
 	<br/>
-	<p:outputLabel value="País: "></p:outputLabel>
-	<p:inputText pt:placeholder="Digite o país" value="#{mEnderecoBean.endereco.pais}"></p:inputText>
+	<h:outputText value=" Estado: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.estado}"></h:outputText>
 	<br/>
 	<br/>
-	<p:commandButton value="Alterar" action="#{mEnderecoBean.alterarEndereco(mEnderecoBean.endereco)}"></p:commandButton>
+	<h:outputText value=" País: "/>
+	<h:outputText value="#{mEnderecoBean.endereco.pais}"></h:outputText>
 	<br/>
 	<br/>
-	<p:commandButton value="Retornar" action="ListarEndereco.xhtml?faces-redirect=true"></p:commandButton>
-	</h:panelGrid>
+	<p:commandButton value="Retornar" action="BuscarEndereco.xhtml?faces-redirect=true"></p:commandButton>
 	</h:form>
 </body>
 </html>
