--- a/TrabalhoBanco/WebContent/Index.administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Index.administrador.xhtml
@@ -4,7 +4,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:b="http://bootsfaces.net/ui" 
+	xmlns:b="http://bootsfaces.net/ui"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -28,7 +28,7 @@
 			id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li><a href="#">Informações</a></li>
-				<li><a href="CadastroCliente.xhtml">Cadastro</a></li>
+				<li><a href="#">Cadastro</a></li>
 				<li class="dropdown"><a href="#" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-expanded="false">Ajuda
 						<span class="caret"></span>
@@ -57,26 +57,25 @@
 </nav>
 <h:body>
 	<h:form acceptcharset="ISO-8859-1">
-	<fieldset>
-		<h1>Cadastrar Endereço</h1>
-		<h:selectOneMenu value="#{mEnderecoBean.idCad}">
-			<f:selectItem itemLabel="Selecione o cadastro" itemValue="0"></f:selectItem>
-			<f:selectItems value="#{mCadastroBean.cadastros}" var="cadastro" itemLabel="#{cadastro.nome}" itemValue="#{cadastro.idCad}"></f:selectItems>
-		</h:selectOneMenu>
-		<br/>
-		<br/>
-			<h:outputText value="• Endereço: "/> 
-			<br/> →<p:inputText id="Cep" required="true" pt:placeholder="CEP" value="#{mEnderecoBean.endereco.cep}"></p:inputText>
-			<br/> →<p:inputText id="Rua" required="true" pt:placeholder="Rua" value="#{mEnderecoBean.endereco.rua}"><f:validateLength minimun="10" maximum="100"/></p:inputText>
-			<br/> →<p:inputText id="Num" required="true" pt:placeholder="Número" value="#{mEnderecoBean.endereco.numero}"></p:inputText>
-			<br/> →<p:inputText id="Bairro" required="true" pt:placeholder="Bairro" value="#{mEnderecoBean.endereco.bairro}"></p:inputText>
-			<br/> →<p:inputText id="Cidade" required="true" pt:placeholder="Cidade" value="#{mEnderecoBean.endereco.cidade}"></p:inputText>
-			<br/> →<p:inputText id="Estado" required="true" pt:placeholder="Estado" value="#{mEnderecoBean.endereco.estado}"></p:inputText>
-			<br/> →<p:inputText id="Pais" required="true" pt:placeholder="País" value="#{mEnderecoBean.endereco.pais}"></p:inputText>
-			<br/>
+		<fieldset>
+			<h1>Cadastrar Administrador</h1>
+			<b:icon name="glyphicon-user"/> 
+			<h:outputText value=" Nome: "/>
+			<p:inputText id="Nome" required="true" pt:placeholder="Digite o nome" value="#{mAdministradorBean.administrador.nome}"></p:inputText>
 			<br/> 
-			<h:commandButton value="Próximo Passo" action="#{mEnderecoBean.gravarEndereco(mEnderecoBean.endereco)}"></h:commandButton>
-	</fieldset>
+			<br/> 
+			<b:icon name="glyphicon-user"/> 
+			<h:outputText value=" Email: "/>
+			<p:inputText id="Email" required="true" pt:placeholder="Digite o e-mail" value="#{mAdministradorBean.administrador.email}"></p:inputText>
+			<br/> 
+			<br/>
+			<b:icon name="glyphicon-user"/> 
+			<h:outputText value=" Senha: "/>
+			<p:password id="senha" required="true" pt:placeholder="Digite a senha" value="#{mAdministradorBean.administrador.senha}"/>
+			<br/> 
+			<br/> 
+			<h:commandButton value="Cadastrar Administrador" action="#{mAdministradorBean.gravarAdministrador(mAdministradorBean.administrador)}"></h:commandButton>
+		</fieldset>
 	</h:form>
-	</h:body>
+</h:body>
 </html>
