--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -79,6 +79,7 @@
 			<p:menuitem value="Pessoas" url="ListarPessoa.xhtml"/>
 			<p:menuitem value="Agências" url="ListarAgencia.xhtml"/>
 			<p:menuitem value="Saldo" url="ListarSaldo.xhtml"/>
+			<p:menuitem value="Administrador" url="ListarAdm.xhtml"/>
 		</p:submenu>
 		<p:submenu label="Cadastrar">
 		<p:menuitem value="Agências" url="Agencia.xhtml"></p:menuitem>
@@ -89,8 +90,6 @@
 		<p:submenu label="Buscar">
 		<p:menuitem value="Cliente" url="BuscarCliente.xhtml"></p:menuitem>
 		<p:menuitem value="Endereços" url="BuscarEndereco.xhtml"></p:menuitem>
-		<p:menuitem value="Cartões" url="BuscarCartao.xhtml"></p:menuitem>
-		<p:menuitem value="Pessoas" url="BuscarPessoa.xhtml"></p:menuitem>
 		<p:menuitem value="Agências" url="BuscarAgencia.xhtml"></p:menuitem>
 		</p:submenu>
 	</p:menubar>
