--- a/TrabalhoBanco/WebContent/InformaçãoBanco.xhtml
+++ b/TrabalhoBanco/WebContent/InformaçãoBanco.xhtml
@@ -66,7 +66,7 @@
   Investimos em projetos ligados à educação, cultura, esportes e mobilidade</p></h2>
   <br>
   </br>
-  <H3>O banco EvilMoney foi criado em 26/04/2017 com uma longa história de uma exelente prestação de serviços, ele foi fundado por Osvaldo Turrato e Petterson Jung</H3>
+  <H3>O banco EvilMoney foi criado em 26/04/2017 com uma longa história de uma exelente prestação de serviços, ele foi fundado por Osvaldo Turrato e Petterson Jung.</H3>
 </fieldset>
 </h:form>
 </h:body>
