--- a/TrabalhoBanco/WebContent/Poupanca.xhtml
+++ b/TrabalhoBanco/WebContent/Poupanca.xhtml
@@ -57,7 +57,7 @@
 	</div>
 </nav>
 <h:form acceptcharset="ISO-8859-1" id="Cadastro">
-	<h1>Poupança do Cliente</h1>
+	<h1>Poupânça do Cliente</h1>
 	<p:dataTable  value="#{mCadastroBean.cadastros}" var="cadastroPoupanca" >
 		<p:column><f:facet name="header">Nome</f:facet>
 		<h:outputText value="#{cadastroPoupanca.nome}"></h:outputText>
