--- a/TrabalhoBanco/WebContent/BuscarEndereco.xhtml
+++ b/TrabalhoBanco/WebContent/BuscarEndereco.xhtml
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="Script.js"></script>
-		<title>Banco EvilMoney</title>
+		<title>Buscar Endereço</title>
 	</h:head>
 <body>
 <nav class="navbar navbar-default">
@@ -22,11 +22,11 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EvilMoney</a>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
     </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Informações</a></li>
+        <li><a href="InformacaoBanco.xhtml">Informações</a></li>
         <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
@@ -34,10 +34,6 @@
             <li><a href="Contato.xhtml">Contato</a></li>
             <li><a href="SAC.xhtml">SAC</a></li>
             <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE 2</a></li>
           </ul>
         </li>
       </ul>
