--- a/TrabalhoBanco/WebContent/SAC.xhtml
+++ b/TrabalhoBanco/WebContent/SAC.xhtml
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="Script.js"></script>
-		<title>Banco EvilMoney</title>
+		<title>SAC</title>
 	</h:head>
 <body>
 <nav class="navbar navbar-default">
@@ -21,23 +21,18 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EvilMoney</a>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
     </div>
-   
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Informações</a></li>
+        <li><a href="InformacaoBanco.xhtml">Informações</a></li>
         <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="Contato.xhtml">Contato</a></li>
-            <li><a href="#">SAC</a></li>
+            <li><a href="SAC.xhtml">SAC</a></li>
             <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE 2</a></li>
           </ul>
         </li>
       </ul>
@@ -46,7 +41,7 @@
           <input type="text" class="form-control" placeholder="Buscar"/>
         </div>
         <button type="submit" class="btn btn-default">Buscar</button>
-      </form>
+              </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="Login.xhtml">Login</a></li>
       </ul>
@@ -60,10 +55,9 @@
 Serviço de Atendimento ao Consumidor é um canal telefônico gratuito para solucionar os problemas na relação de consumo, por meio de recebimento de 
 reclamações, fornecimento de informações públicas e gerais e pedidos de cancelamento de produtos e servicos.</h2>
 <p:panel id="telefone" header="Telefone">
-            <h:outputText value="0000 0000000" />
-            </p:panel>    
-            </h:form>
-            </div>
+<h:outputText value="0000 0000000" />
+</p:panel>    
+</h:form>
+</div>
 </body>
-
 </html>
