--- a/TrabalhoBanco/WebContent/Emprestimo.xhtml
+++ b/TrabalhoBanco/WebContent/Emprestimo.xhtml
@@ -11,58 +11,64 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap.css" />
 	<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="Script.js"></script>
-	<title>Área do Cliente</title>
+	<title>Empréstimo</title>
 </h:head>
 <h:body>
 <nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed"
-				data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span> <span
-					class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
-		</div>
-
-		<div class="collapse navbar-collapse"
-			id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-				<li><a href="#">Informações</a></li>
-				<li><a href="#">Cadastro</a></li>
-				<li class="dropdown"><a href="#" class="dropdown-toggle"
-					data-toggle="dropdown" role="button" aria-expanded="false">Ajuda
-						<span class="caret"></span>
-				</a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a href="Contato.xhtml">Contato</a></li>
-						<li><a href="SAC.xhtml">SAC</a></li>
-						<li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
-						<li class="divider"></li>
-						<li><a href="#">TESTE</a></li>
-						<li class="divider"></li>
-						<li><a href="#">TESTE 23211232</a></li>
-					</ul></li>
-			</ul>
-			<form class="navbar-form navbar-right" role="search">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Buscar" />
-				</div>
-				<button type="submit" class="btn btn-default">Buscar</button>
-			</form>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="Login.xhtml">Login</a></li>
-			</ul>
-		</div>
-	</div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
+    </div>
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="InformacaoBanco.xhtml">Informações</a></li>
+        <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="Contato.xhtml">Contato</a></li>
+            <li><a href="SAC.xhtml">SAC</a></li>
+            <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Buscar"/>
+        </div>
+        <button type="submit" class="btn btn-default">Buscar</button>
+              </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="Login.xhtml">Login</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 <h:form acceptcharset="ISO-8859-1">
 <fieldset>
-<h1>Emprestimo do Cliente</h1>
+	<h1>Empréstimo do Cliente</h1>
 			<h:outputText value=" Emprestimo avaliado: "/>
-			<p:inputText id="emprestimo" required="true" pt:placeholder="" value="#{mCadastroBean.cadastro.emprestimo}"></p:inputText>
+			<p:inputText id="emprestimo" pt:placeholder=""></p:inputText>
+			<br/>
+			<br/>
+			<h:outputText value=" Motivo: "/>
+			<p:inputText id="motivo"  pt:placeholder=""></p:inputText>
+			<br/>
+			<br/>
+			<h:outputText value=" Tempo do Emprestimo: "/>
+			<p:inputText id="tempo"  pt:placeholder=""></p:inputText>
+			<br/>
+			<br/>
+			<h:commandButton value="Efetuar empréstimo"></h:commandButton>
+			<br/>
+			<br/>
+			<h:commandButton value="Retornar" action="AreaCliente.xhtml?faces-redirect=true"></h:commandButton>
 			</fieldset>
-			</h:form>
-			</h:body>
-			</html>
+	</h:form>
+</h:body>
+</html>
 			
