--- a/TrabalhoBanco/WebContent/Index.xhtml
+++ b/TrabalhoBanco/WebContent/Index.xhtml
@@ -20,23 +20,18 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EvilMoney</a>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
     </div>
-   
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Informações</a></li>
+        <li><a href="InformacaoBanco.xhtml">Informações</a></li>
         <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Contato</a></li>
-            <li><a href="#">SAC</a></li>
-            <li><a href="#">Ouvidoria</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE 2</a></li>
+            <li><a href="Contato.xhtml">Contato</a></li>
+            <li><a href="SAC.xhtml">SAC</a></li>
+            <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
           </ul>
         </li>
       </ul>
@@ -45,7 +40,7 @@
           <input type="text" class="form-control" placeholder="Buscar"/>
         </div>
         <button type="submit" class="btn btn-default">Buscar</button>
-      </form>
+              </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="Login.xhtml">Login</a></li>
       </ul>
