--- a/TrabalhoBanco/WebContent/InserirConta.xhtml
+++ b/TrabalhoBanco/WebContent/InserirConta.xhtml
@@ -11,50 +11,42 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap.css" />
 	<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="Script.js"></script>
-	<title>Cadastro Cliente</title>
+	<title>Inserir Conta</title>
 </h:head>
 <body>
 <nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed"
-				data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span> <span
-					class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
-		</div>
-
-		<div class="collapse navbar-collapse"
-			id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-				<li><a href="#">Informações</a></li>
-				<li><a href="#">Cadastro</a></li>
-				<li class="dropdown"><a href="#" class="dropdown-toggle"
-					data-toggle="dropdown" role="button" aria-expanded="false">Ajuda
-						<span class="caret"></span>
-				</a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a href="Contato.xhtml">Contato</a></li>
-						<li><a href="SAC.xhtml">SAC</a></li>
-						<li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
-						<li class="divider"></li>
-						<li><a href="#">TESTE</a></li>
-						<li class="divider"></li>
-						<li><a href="#">TESTE 23211232</a></li>
-					</ul></li>
-			</ul>
-			<form class="navbar-form navbar-right" role="search">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Buscar" />
-				</div>
-				<button type="submit" class="btn btn-default">Buscar</button>
-			</form>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="Login.xhtml">Login</a></li>
-			</ul>
-		</div>
-	</div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
+    </div>
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="InformacaoBanco.xhtml">Informações</a></li>
+        <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="Contato.xhtml">Contato</a></li>
+            <li><a href="SAC.xhtml">SAC</a></li>
+            <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Buscar"/>
+        </div>
+        <button type="submit" class="btn btn-default">Buscar</button>
+              </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="Login.xhtml">Login</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 	<h:form acceptcharset="ISO-8859-1" id="Conta">
 	<p:dataTable  value="#{mCadastroBean.cadastros}" var="cadastroCliente" >
