--- a/TrabalhoBanco/WebContent/ListarAdm.xhtml
+++ b/TrabalhoBanco/WebContent/ListarAdm.xhtml
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="Script.js"></script>
-		<title>Listar Saldo</title>
+		<title>Listar Administradores</title>
 	</h:head>
 <body>
 <nav class="navbar navbar-default">
@@ -49,22 +49,22 @@
     </div>
   </div>
 </nav>
-	<h:form acceptcharset="ISO-8859-1" id="Cadastro">
-	<p:dataTable  value="#{mCadastroBean.cadastros}" var="cadastroCliente" >
+	<h:form acceptcharset="ISO-8859-1" id="Adm">
+	<p:dataTable  value="#{mAdministradorBean.administradores}" var="cadastroADM">
 	<p:column><f:facet name="header">Nome</f:facet>
-	<h:outputText value="#{cadastroCliente.nome}"></h:outputText>
+	<h:outputText value="#{cadastroADM.nome}"></h:outputText>
 	</p:column>
-	<p:column><f:facet name="header">Saldo</f:facet>
-	<h:outputText value="#{cadastroCliente.saldo}"></h:outputText>
+	<p:column><f:facet name="header">Email</f:facet>
+	<h:outputText value="#{cadastroADM.email}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Alterar</f:facet>
-	<p:commandLink  value="Alterar" action="#{mCadastroBean.enviarDadosParaAlterar2(cadastroCliente)}"></p:commandLink>
+	<p:commandLink  value="Alterar" action="#{mAdministradorBean.enviarDadosParaAlterar(cadastroADM)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Remover</f:facet>
-	<p:commandLink  value="Remover" action="#{mCadastroBean.removerCadastro(cadastroCliente)}"></p:commandLink>
+	<p:commandLink  value="Remover" action="#{mAdministradorBean.removerAdministrador(cadastroADM)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
-	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
+	<p:commandLink  value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
 	</p:column>
 	</p:dataTable>
 	</h:form>
