--- a/TrabalhoBanco/WebContent/Ouvidoria.xhtml
+++ b/TrabalhoBanco/WebContent/Ouvidoria.xhtml
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="Script.js"></script>
-		<title>Banco EvilMoney</title>
+		<title>Ouvidoria</title>
 </h:head>
 <body>
 <nav class="navbar navbar-default">
@@ -21,12 +21,11 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EvilMoney</a>
+      <a class="navbar-brand" href="Index.xhtml">EvilMoney</a>
     </div>
-   
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Informações</a></li>
+        <li><a href="InformacaoBanco.xhtml">Informações</a></li>
         <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
@@ -34,10 +33,6 @@
             <li><a href="Contato.xhtml">Contato</a></li>
             <li><a href="SAC.xhtml">SAC</a></li>
             <li><a href="Ouvidoria.xhtml">Ouvidoria</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE</a></li>
-            <li class="divider"></li>
-            <li><a href="#">TESTE 2</a></li>
           </ul>
         </li>
       </ul>
@@ -46,7 +41,7 @@
           <input type="text" class="form-control" placeholder="Buscar"/>
         </div>
         <button type="submit" class="btn btn-default">Buscar</button>
-      </form>
+              </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="Login.xhtml">Login</a></li>
       </ul>
@@ -56,15 +51,9 @@
 <h:form acceptcharset="ISO-8859-1">
 		<fieldset>
 			<h1>Ouvidoria</h1>
-			<H2><p>Se a sua reclamação foi tratada em nossos canais de atendimento, mas a resposta não atendeu sua expectativa, a Ouvidoria Itaú pode reavaliar seu pedido.
-Se preferir ligue para 0000 0000000, de segunda a sexta (dias úteis) das 9h às 18h</p></H2>
-asaas
-			
-			</fieldset>
-			</h:form>
-
-
-
-
+			<p>Se a sua reclamação foi tratada em nossos canais de atendimento, mas a resposta não atendeu sua expectativa, a Ouvidoria Itaú pode reavaliar seu pedido.
+Se preferir ligue para 0000 0000000, de segunda a sexta (dias úteis) das 9h às 18h</p>
+		</fieldset>
+	</h:form>
 </body>
 </html>
